# kanbad

./: README.md
_old/frontend/old/: webpack.config.js
api/: README.md
api/migrations/: 20230502013842_cascade-card-deletes.sql  20230516175356_card-position.sql  20230518130813_board-position.sql  20230525132949_workspace-fields.sql
api/src/: main.rs  store.rs
api/src/store/: boards.rs  cards.rs  mod.rs  (+1 more)
backend/: README.md  build.gradle  run.sh  settings.gradle  twello.yml
backend/java-dropwizard/: README.md  build.gradle
backend/ruby-rails/: Gemfile
backend/rust-actix/: Cargo.toml
backend/rust-actix-new/: Cargo.toml
backend/rust-actix/migrations/2019-01-04-011608_create_workspaces/: up.sql
backend/rust-actix/migrations/2019-01-04-012457_create_boards/: up.sql
backend/rust-actix/migrations/2019-01-04-012844_create_cards/: up.sql
backend/rust-actix/src/: lib.rs  main.rs  models.rs  schema.rs
backend/rust-axum/: Cargo.toml
backend/rust-axum/src/: handlers.rs  lib.rs  main.rs  store.rs
frontend/: README.md  package-lock.json  package.json  webpack.config.js
frontend/new/: next.config.js
frontend/old/: package.json
frontend/src/: index.html  index.production.html  main.tsx  style.scss
rails_backend/: Gemfile
rails_backend/config/: application.rb  routes.rb
rails_backend/db/: schema.rb
web/: README.md  package-lock.json  package.json
web/components/: index.tsx
web/lib/: api.ts  dnd.ts  models.ts  storage.ts
web/pages/: _app.tsx  _components.tsx  _document.tsx  index.tsx  kit.tsx
web/styles/: globals.css  nord.css
(+126 files in other folders)
