[package]
name = "twello"
version = "0.1.0"
authors = ["kevin larrabee <echo1+git@dvnl.net>"]
edition = "2018"

[dependencies]
actix-web = "0.7.17"
diesel = { version = "1.4.6", features = ["postgres", "uuid"] }
dotenv = "0.10.1"
serde = "1.0.84"
serde_derive = "1.0.84"
uuid = { version = "0.6.5", features = ["serde", "v4"] }
