[package]
name = "kanbad"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
dotenvy = "0.15"
serde = "1"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
